invoices data sent to server code added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="total_cart_amount">Rs. %d</string>
     <string name="error_connecting">Error in sending the network request. Please try again after some time.</string>
     <string name="add_food_item_success_msg">Successfully added the food item!</string>
+    <string name="no_internet_connection_error">No internet connection. Please check your connection.</string>
+    <string name="subscribe_lbl">Subscribe</string>
 </resources>
